--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -55,6 +55,7 @@
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="6f8-o7-5Vc" firstAttribute="top" secondItem="u4b-s2-wSV" secondAttribute="bottom" constant="8" id="3Sk-qH-ORB"/>
                             <constraint firstItem="u4b-s2-wSV" firstAttribute="centerX" secondItem="N96-tX-iQK" secondAttribute="centerX" id="Eu0-Xj-EdL"/>
@@ -70,12 +71,21 @@
                             <constraint firstItem="Al0-4O-eNG" firstAttribute="centerX" secondItem="N96-tX-iQK" secondAttribute="centerX" id="wGc-Lt-X2l"/>
                             <constraint firstItem="78L-B5-HdB" firstAttribute="centerX" secondItem="N96-tX-iQK" secondAttribute="centerX" id="wr4-SF-X95"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Ctj-Wf-CSS" appends="YES" id="5YV-79-4Gf"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="celsiusLabel" destination="6f8-o7-5Vc" id="DsP-Ex-e93"/>
+                        <outlet property="textField" destination="78L-B5-HdB" id="ggb-Ak-6oz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Ctj-Wf-CSS">
+                    <connections>
+                        <action selector="dismissKeyboard:" destination="BYZ-38-t0r" id="AEw-6U-4pK"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="304.5" y="314.5"/>
         </scene>
