--- a/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="304.5" y="314.5"/>
+            <point key="canvasLocation" x="1210" y="-328"/>
         </scene>
         <!--MapViewController-->
         <scene sceneID="m3o-HC-Oun">
@@ -99,7 +99,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="daI-fp-Wqa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1804" y="314"/>
+            <point key="canvasLocation" x="1210" y="366"/>
+        </scene>
+        <!--WebViewController-->
+        <scene sceneID="xUz-pO-CF4">
+            <objects>
+                <viewController title="WebViewController" id="1xT-ce-mNW" customClass="WebViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="03d-bU-U12"/>
+                        <viewControllerLayoutGuide type="bottom" id="qC0-Ff-zWF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="28Z-i0-rMb">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Web" id="H7w-VW-FMZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Cd-rn-frf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1210" y="1071"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="neb-5f-cI5">
@@ -113,22 +132,12 @@
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="aKn-xH-Fnf"/>
                         <segue destination="JgH-rp-5Wj" kind="relationship" relationship="viewControllers" id="aZw-e0-nC9"/>
-                        <segue destination="71E-ne-3Jc" kind="relationship" relationship="viewControllers" id="Gjv-qJ-fR6"/>
+                        <segue destination="1xT-ce-mNW" kind="relationship" relationship="viewControllers" id="SRj-XF-HdH"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tzv-ka-wp6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="992" y="314"/>
-        </scene>
-        <!--WebViewController-->
-        <scene sceneID="Shq-81-ihN">
-            <objects>
-                <viewController title="WebViewController" id="71E-ne-3Jc" userLabel="WebViewController" customClass="WebViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Web" id="UFu-XW-VIA"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9dG-yw-to3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="676" y="1035"/>
+            <point key="canvasLocation" x="432" y="366"/>
         </scene>
     </scenes>
     <resources>
